# new_tg_notification_google

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yaml  bot.py  docker-compose.yml  pyproject.toml  queries.py  req.txt  todo
src/: bot.py  buttons.py  database.py  google_calendar.py  google_calendar_client.py  inline_buttons.py  queries.py  services.py  utils.py
